2000-03-17  Roland McGrath  <roland@baalperazim.frob.com>

	* crash.c (S_crash_dump_task): Use ports_get_send_right.

2000-01-28  Roland McGrath  <roland@baalperazim.frob.com>

	* crash.c (enum crash_action): New alternative crash_unspecified (0).
	(crash_orphans_how): New variable.
	(S_crash_dump_task): If crash_how != crash_orphans_how, ascertain if
	the task is an orphan before deciding what to do.
	(options): New options --action, --orphan-action.
	Old options now compatability aliases for --action=foo.
	(parse_opt): Parse them.
	(doc): New variable.
	(crash_argp): Use DOC.

1999-12-03  Roland McGrath  <roland@baalperazim.frob.com>

	* null.c: Support --full/-f option to be /dev/full (ENOSPC writes).
	(write_error_code): New variable.
	(options, argp): New static const variables.
	(parse_opt): New function.
	(main): Move local ARGP out to static.
	(trivfs_S_io_write): Return write_error_code instead of zero.

1999-11-08  Roland McGrath  <roland@baalperazim.frob.com>

	* hello-mt.c: New file, modified from hello.c to be multithreaded.
	* Makefile (targets, SRCS): Add hello-mt, hello-mt.c.
	(hello-mt): Add appropriate deps.

	* Makefile (hello): Don't depend on libthreads.

	* hello.c (trivfs_modify_stat): Set st_size from contents_len, not
	sizeof (hello) - 1.

	* hello.c: New file.  From Gord with some cleanups and hacks from me.
	* Makefile (targets, SRCS): Add hello, hello.c.
	(hello): Add appropriate deps.

1999-10-11  Roland McGrath  <roland@baalperazim.frob.com>

	* magic.c: Rewritten using libtrivfs.
	With new flag --directory/-d, present an empty directory that
	has . and .. as normal and lists no other contents, but
	looking up anything else within it does the magical retry.
	* Makefile (magic): Update library deps accordingly.

1999-09-13  Roland McGrath  <roland@baalperazim.frob.com>

	* fifo.c, null.c, new-fifo.c: Reverted changes related to
	io_map_segment.

1999-09-07  Thomas Bushnell, BSG  <tb@mit.edu>

	* null.c (trivfs_S_io_map): Renamed to ...